--- a/index.html
+++ b/index.html
@@ -3,45 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Input and Button</title>
+    <title>Scrollable Divs</title>
     <style>
-        /* Container styling */
-        .input-container {
+        .scroll-container {
+            display: flex;
+            overflow-x: scroll;
+            gap: 10px;
+            padding: 10px;
+            scroll-behavior: smooth;
+        }
+        .scroll-item {
+            min-width: 200px;
+            height: 150px;
+            background-color: lightblue;
+            border: 1px solid #ccc;
             display: flex;
             align-items: center;
+            justify-content: center;
+            font-size: 20px;
         }
-
-        /* Input field styling */
-        .input-field {
-            padding: 8px;
-            border: 1px solid #d1d1d1;
-            border-radius: 4px 0 0 4px;
-            outline: none;
-            width: 200px;
-            font-size: 14px;
+        .button-container {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 10px;
         }
-
-        /* Button styling */
-        .add-button {
-            padding: 8px 16px;
-            background-color: #3b5998; /* Facebook blue color */
-            color: white;
-            border: none;
-            border-radius: 0 4px 4px 0;
-            font-size: 14px;
+        button {
+            padding: 10px;
+            font-size: 16px;
             cursor: pointer;
-        }
-
-        /* Button hover effect */
-        .add-button:hover {
-            background-color: #334d84;
         }
     </style>
 </head>
 <body>
-    <div class="input-container">
-        <input type="text" class="input-field" placeholder="Page name ..." />
-        <button class="add-button">Add</button>
-    </div>
+
+<div class="scroll-container" id="scrollContainer">
+    <div class="scroll-item">Item 1</div>
+    <div class="scroll-item">Item 2</div>
+    <div class="scroll-item">Item 3</div>
+    <div class="scroll-item">Item 4</div>
+    <div class="scroll-item">Item 5</div>
+    <div class="scroll-item">Item 6</div>
+    <div class="scroll-item">Item 7</div>
+</div>
+
+<div class="button-container">
+    <button onclick="scrollLeftHandler()">Scroll Left</button>
+    <button onclick="scrollRightHandler()">Scroll Right</button>
+</div>
+
+<script>
+    const scrollContainer = document.getElementById('scrollContainer');
+
+    function scrollLeftHandler() {
+        scrollContainer.scrollTo({
+            left: scrollContainer.scrollLeft - 200,
+            behavior: 'smooth'
+        });
+    }
+
+    function scrollRightHandler() {
+        scrollContainer.scrollTo({
+            left: scrollContainer.scrollLeft + 200,
+            behavior: 'smooth'
+        });
+    }
+</script>
+
 </body>
 </html>
